--- a/src/app.html
+++ b/src/app.html
@@ -1,27 +1,65 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" >
+	<head>
+		<meta charset="utf-8" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+		<meta name="viewport" content="width=device-width" />
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width" />
+		<script>
+			// Immediately set theme on page load before any content renders
+			try {
+				const stored = localStorage.getItem('preferences');
+				if (stored) {
+					const preferences = JSON.parse(stored);
+					document.documentElement.classList.toggle('dark', preferences.theme === 'dark');
+					document.documentElement.classList.toggle('light', preferences.theme !== 'dark');
+				}
+			} catch (e) {
+				// If there's any error, fallback to system preference
+				const isDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+				document.documentElement.classList.toggle('dark', isDark);
+				document.documentElement.classList.toggle('light', !isDark);
+			}
+		</script>
 
-	<script>
-		if (
-			localStorage.theme === 'dark' ||
-			(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
-		) {
-			document.documentElement.classList.add('dark');
-		} else {
-			document.documentElement.classList.remove('dark');
+		%sveltekit.head%
+	</head>
+
+	<body data-sveltekit-preload-data="hover">
+		<svg class="absolute">
+			<filter id="grain">
+				<feTurbulence type="turbulence" baseFrequency="0.69" />
+			</filter>
+		</svg>
+
+		<div style="display: contents; min-height: 100vh">%sveltekit.body%</div>
+	</body>
+
+	<style>
+		body {
+			position: relative;
 		}
-	</script>
 
-	%sveltekit.head%
-</head>
+		body::before,
+		body::after {
+			position: absolute;
+			filter: url(#grain);
+			left: 0;
+			top: 0;
+			content: '';
+			width: 100%;
+			height: 100%;
+			z-index: 9999;
+			opacity: 18%;
+			filter: contrast(150%) brightness(300%);
+			pointer-events: none;
+		}
 
-<body data-sveltekit-preload-data="hover">
-	<div class="h-100" style="display: contents">%sveltekit.body%</div>
-</body>
-
+		body::before {
+			filter: url(#grain);
+		}
+	</style>
 </html>
